Make images like button and implement LOGOUT
LOGOUT

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 out/production/KNK2020/contractM/MainProgram.class
 out/production/KNK2020/contractM/Welcome.class
+out/production/KNK2020/contractM/Main.class
+out/production/KNK2020/contractM/MainProgram.class
+out/production/KNK2020/contractM/Welcome.class
