HomeContent Change Design
--Automatic Log In after Signing Up

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ out/production/KNK2020/contractM/Welcome.class
 out/production/KNK2020/contractM/Main.class
 out/production/KNK2020/contractM/MainProgram.class
 out/production/KNK2020/contractM/Welcome.class
+.idea/artifacts/JavaFXApp.xml
+.idea/artifacts/KNK2020_jar.xml
+out/artifacts/KNK2020_jar/KNK2020.jar
+out/production/KNK2020/META-INF/MANIFEST.MF
+src/META-INF/MANIFEST.MF
+.idea/artifacts/JavaFXApp.xml
+.idea/artifacts/KNK2020_jar.xml
